2004-10-28  Todd Berman  <tberman@off.net>

	* Services/File/RecentFiles.cs: Remove C.WL

2004-10-27  Todd Berman  <tberman@off.net>

	* Commands/AutoStartCommands.cs: Fix the Load Previous Project on
	Startup option.

2004-10-27  John Luke  <john.luke@gmail.com>

	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyParameter.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyMethod.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyReturnType.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyEvent.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyAttribute.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyField.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyProperty.cs:
	Add a using alias for SharpAssembly so we can compile with mcs HEAD
	we were taking advantage of a mcs bug it seems

2004-10-27  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Services/ParserService/DefaultParserService.cs: comment out code
	to select the VB parser, because we dont actually have one yet.

2004-10-22  Chris Toshok  <toshok@ximian.com>

	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: add
	DebuggerThreadPad.

2004-10-22  Chris Toshok  <toshok@ximian.com>

	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: add
	MonoDevelop.SourceEditor.Gui.DebuggerStackTracePad to the
	debugPads.

2004-10-21  Chris Toshok  <toshok@ximian.com>

	* Gui/Workbench/DefaultWorkbench.cs: don't try to open
	cur_dbgFilename if it's String.Empty.

2004-10-20  John Luke  <john.luke@gmail.com>

	* Commands/MenuItemBuilders.cs:
	* Commands/FileCommands.cs:
	* Commands/AutostartCommands.cs:
	* Services/File/RecentOpen.cs:
	* Services/File/DefaultFileService.cs:
	* Services/Project/DefaultProjectService.cs: enable new Recent Files stuff,
	and small adjustments for it.

2004-10-20  John Luke  <john.luke@gmail.com>

	* Services/File/RecentFiles.cs: fix a bunch of bugs

2004-10-20  John Luke  <john.luke@gmail.com>

	* Makefile.am: remove RingBuffer, add RecentFiles (not used yet)